--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -1,38 +1,280 @@
+/*reset do css (margin e padding e ajusta o box-sizing)*/
+* {
+  margin:0;
+  padding:0;
+  box-sizing: border-box;
+}
+
 body {
-    background-image: url("https://www.iestecnologia.com.br/wp-content/uploads/2019/02/fundo-banner-ies.jpg");  
+     background-image: url("https://1.bp.blogspot.com/-hPTt-K4vL1s/VhswvXNtugI/AAAAAAAAAXo/TluQCvDJyjA/s1600/tumblr_static_background.jpg");  
      background-size: auto 100vh;
-     font-family: Arial;
+     background-attachment: fixed;
+     font-family: 'DM Mono', monospace;
      height: 100vh; 
+     font-size: 12px;
    }
+/*Se a tela tiver pelo menos 400px vais carregar esses estilos */
+@media (min-width: 400px) {
+  body{
+    font-size: 14px;
+  }
+ }
+ 
+/*breakpoint*/
+@media (min-width: 600px) {
+  body{
+    font-size: 18px;
+  }
+ }
+
+/*breakpoint*/
+@media (min-width: 1200px) {
+    body{
+      font-size: 20px;
+    }
+ }
    
-   .menu{
+header {
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.menu{
      background-color: white;
-   }
+     position: fixed;
+     top: 0;
+     width: 100vw;
+     z-index: 1;
+}
    
-   .menu ul{
+.menu ul{
      display: flex;
      justify-content: space-around; 
-   }
+}
    
-   .menu li{
+.menu li{
      list-style: none;
-   }
+}
    
-   a{
+.menu a:active,
+.menu a:hover{
+     background-color: teal;
+     color: white;
+}
+
+.menu a{
+    display: block;
+    padding: 10px 20px;
+    transition: background-color 1s, color 1s;
+ }
+
+a{
      color: teal;
      text-decoration: none;
-   }
+}
    
-   a:hover{
+a:hover{
      text-decoration: underline;
-   }
+}
    
-   .site_subtitle,
-   .site_title{
+/*.titulo{
+     transform: scale(0.2) translateY(50vh);
+     opacity: 0;
+
+     animation: linear 2s animacaoTitulo forwards;
+}
+
+@keyframes animacaoTitulo{
+     from{
+          transform: scale(0.2) translateY(50vh);
+          opacity: 0;  
+     }
+     
+     to{
+          transform: scale(1) translateY(0);
+          opacity: 1;
+
+     }
+
+}
+*/
+
+.site_subtitle,
+.site_title{
      color: yellow;
      text-align: center; 
-   }
+}
    
-   .site_subtitle{
+.site_title{
+     font-size: 4em;
+     font-family: 'Indie Flower', cursive;
+}
+.site_subtitle{
      font-style: italic;
-   }
+     font-family: 'Balsamiq Sans', cursive;
+     line-height: 1.5em;
+}
+
+.contato .icons{
+     text-align: center;
+}
+
+.sobre,
+.contato,
+.portfolio{
+     padding: 2em;
+     min-height: 100vh;
+}
+
+@media(min-width: 1200px){
+     .container{
+         max-width: 1200px;
+         margin-left: auto;
+         margin-right: auto;
+     } 
+}
+
+.sobre h2,
+.contato h2,
+.portfolio h2{
+     font-family: 'Balsamiq Sans', cursive;
+     color: darkred;
+     margin-top: 0.5em;
+     margin-bottom: 1em;/*margem embaixo*/
+     font-size: 2em;
+}
+
+.sobre p{
+     color: whitesmoke;
+     margin-bottom: 1.5em;
+     text-indent: 1.5em;
+     text-align: justify;
+}
+
+
+.sobre .perfil{
+     margin-left: 2em;
+     text-align: center;
+}
+
+@media(min-width: 600px){
+     .sobre .perfil{
+          float: right;
+     }
+}
+
+.sobre .perfil img{
+     height: 180px;
+     width: 240px;
+     object-fit: fill;
+     object-position: unset;
+     border-radius: 5%;
+     /*clip-path:polygon(20% 0%, 80% 0%, 100% 20%, 100% 80%, 80% 100%, 20% 100%, 0% 80%, 0% 20%);*/
+}
+
+.portfolio .grid{
+     display: grid;
+     gap: 2em;/*espaçamento entre cada linha ou coluna do grid*/ 
+     color: whitesmoke;
+}
+
+@media(min-width: 580px){
+     .portfolio .grid{   
+          grid-template-columns: 240px 240px;/*controla a largura de cada coluna*/
+          justify-content: center;
+          align-content: center;
+     }
+}
+
+@media(min-width: 880px){
+     .portfolio .grid{   
+          grid-template-columns: repeat(3, 260px);/*controla a largura de cada coluna*/
+          justify-content: center;
+          align-content: center;
+          height: calc(100vh-8em-48px);
+     }
+}
+
+
+.portfolio figure{
+     text-align: center;
+}
+
+.img-portfolio{
+     height: 180px;
+     width: 100%;
+     object-fit: unset;
+     object-position: left;
+     border-radius: 5%;
+     transition: transform 500ms;
+}
+
+
+/*.img-portfolio:hover{
+     transform: scale(1.2) rotate(-1deg);
+}*/
+
+.flip-card{
+     height: 180px;
+     perspective: 1000px;
+}
+
+.card{
+     position: relative;
+     transform-style: preserve-3d;
+     transition: transform 3s;
+}
+
+.flip-card:hover .card{
+     transform: rotateY(180deg);
+}
+
+.card-frente, .card-verso{
+     backface-visibility: hidden;
+     position: absolute;
+     top: 0;
+     left: 0;
+     width: 100%;
+}
+
+.card-verso{
+     display: flex;
+     align-items: center;
+     justify-content: center;
+     background-color: #353839;
+     height: 180px;
+     width: 100%;
+     border-radius: 5%;
+     transform: rotateY(180deg);
+
+}
+
+.card-verso h3 a{
+     color: teal;
+     background-color: none;
+}
+
+.card-verso h3 a:hover{
+     background-color: whitesmoke;
+     color: teal;
+}
+
+.card-verso h3{
+     font-family: 'Balsamiq Sans', cursive;
+}
+
+.contato a {
+     color:whitesmoke;
+     font-size: 4em;
+     transition: text-shadow 1s;
+}
+
+.contato a:active,
+.contato a:hover{
+     text-decoration: none;
+     text-shadow: 0px 0px 10px rgba(255, 0, 0, 0.5);
+}
+  
